--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
   <head>
     <title>Task Manager</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='css/style.css' />
   </head>
   <body>
     <h1>Task Manager</h1>
