--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,16 +5,17 @@
 		<link rel='stylesheet' href='css/style.css' />
 	</head>
 	
-	<body>
+	<bod ng-controller = "MainCtrl">
 	  
 	    <h1>Task Manager</h1>
 	
 	    <ng-view></ng-view>
 	
 	    <!-- Libraries -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-resource.min.js"></script>
+		<script src="lib/angular.min.js"></script>
+	    <script src="lib/angular-route.min.js"></script>
+	    <script src="lib/angular-resource.min.js"></script>
+	    <script src="lib/angular-storage.min.js"></script>
 	    <script src="js/script.js"></script>
     
 	</body>
