--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="app">
 	<head>
-		<title>Task Manager</title>
+		<title>Auth Management Boilerplate</title>
 		<link rel='stylesheet' href='css/style.css' />
 	</head>
 	
 	<bod ng-controller = "MainCtrl">
 	  
-	    <h1>Task Manager</h1>
+	    <h1>Auth Management Boilerplate</h1>
 	
 	    <ng-view></ng-view>
 	
